--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,82 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+body{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #000;
+  color: #fff;
+  overflow: hidden;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.css-b62m3t-container{
+  width: 65%;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.css-1mi3hag-control{
+  width: 100%;
 }
 
-.card {
-  padding: 2em;
+.css-sl4pg4-control{
+  width: 30% !important;
 }
 
-.read-the-docs {
-  color: #888;
+.btnNormal{
+  padding: 10px;
+  color: #fff;
+  border-radius: 10px;
+  border: 0;
+  outline: 0;
+  cursor: pointer;
+}
+
+p{
+  margin-top: 10px !important;
+  margin-bottom: 10px !important;
+  color: gray;
+}
+
+p > strong{
+  font-size: 20px !important;
+  color: #fff;
+}
+
+ul li{
+  color: gray;
+  margin-top: 10px !important;
+  margin-bottom: 10px !important;
+  list-style: circle !important;
+}
+
+li strong {
+  color: #fff;
+}
+
+pre{
+  background-color: #121214 !important;
+  padding: 10px;
+  color: #fff;
+  overflow: auto;
+}
+
+pre::-webkit-scrollbar{
+ display: none;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #030303;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #212121;
 }
